k8s/deployment-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: microblog-databases
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microblog-databases
  template:
    metadata:
      labels:
        app: microblog-databases
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
