k8s/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: default
  labels:
    app: microblog-databases
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: microblog-databases
  type: ClusterIP
  sessionAffinity: None
