k8s/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: default
  labels:
    app: microblog-databases
spec:
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    app: microblog-databases
  type: ClusterIP
  sessionAffinity: None
